# django-project

./: pyproject.toml
project/app/backend/site/: forms.py  urls.py  views.py
project/app/frontend/public/static/css/: custom.css  custom.css.map
project/app/frontend/templates/: base.html
project/app/frontend/templates/auth/: cadastro.html  login.html
project/app/frontend/templates/django/forms/: div.html
project/app/frontend/templates/site/: formulario_exemplo.html  home.html  tabela_exemplo.html
project/app/frontend/templates/site/common/: header.html  page_main.html
project/authentication/: api.py  forms.py  models.py  urls.py  views.py
project/authentication/api/: urls.py  views.py
project/authentication/migrations/: 0001_initial.py
project/src/: settings.py  urls.py
sass/custom/: _card.scss  _config.scss  _geral.scss  _header.scss  _table.scss  _widgets.scss  custom.scss
sass/custom/animations/: _animations.scss  _templates.scss
sass/custom/animations/templates/: _pulse.scss
